crates/index-scheduler/src/snapshots/lib.rs/test_document_addition_with_set_and_null_primary_key/documents.snap
---
source: index-scheduler/src/lib.rs
---
[
  {
    "paw": 2,
    "doggo": "jean bob"
  },
  {
    "paw": 3,
    "doggo": "jean bob"
  },
  {
    "paw": 4,
    "doggo": "jean bob"
  },
  {
    "paw": 5,
    "doggo": "jean bob"
  }
]
